--- a/index.html
+++ b/index.html
@@ -17,21 +17,25 @@
     <h4>Travel and Transport</h4>
     <h4>Implementation Coordinator</h4>
     <p>March 2012 to present</p>
-    <p>Coordinate and manage projects of implementation, ensuring successful implementation of new accounts.  
-      Work as a liaison during implementation to build relationships with new clients to ensure customer 
-      satisfaction and expectations are met.  I also work with internal Travel and Transport departments 
-      to assist with the implementation of new or existing accounts. </p>
+    <ul>
+      <li>Coordinate and manage projects of implementation, ensuring successful implementation of new accounts.</li> 
+      <li>Work as a liaison during implementation to build relationships with new clients to ensure customer satisfaction and expectations are met. </li>
+      <li>Work with internal Travel and Transport departments to assist with the implementation of new or existing accounts. </li>
+    </ul>
     
     <h4>Bench Team</h4>
-    <p>Arrange domestic and international reservations, including air, car, hotel, limousine 
-      and Amtrak for multiple corporate clients.  I also assisted with working Online Fulfillment queues.</p>
+    <ul>
+      <li>Arrange domestic and international reservations, including air, car, hotel, limousine and Amtrak for multiple corporate clients. </li>
+      <li>I also assisted with working Online Fulfillment queues.</li>
+    </ul>
     
     <h4>Supervisor</h4>
     <p>March 2009 - May 2010</p>
-    <p>Supervise a team of eight corporate travel counselors and supported my team with problem solving as 
-      well as other teams when needed.  Provide feedback on my team’s quality involving telephone and travel 
-      itineraries.  Resolve customer service issues as well as speak with customers who wish to escalate their 
-      concerns.  When needed, provide back up to the team to answer holding calls.  Review and submit my team’s 
+    <ul>
+      <li>Supervise a team of eight corporate travel counselors and supported my team with problem solving as well as other teams when needed.</li>
+      <li>Provide feedback on my team’s quality involving telephone and travel itineraries. </li>
+      <li>Resolve customer service issues as well as speak with customers who wish to escalate their concerns.</li>
+        When needed, provide back up to the team to answer holding calls.  Review and submit my team’s 
       timecards and consider time off requests.  Add and update information to my team’s intranet.  Initiate cost 
       saving measures for our clients and report those savings back to the client quarterly.  I also assist my manager 
       in creating team policies and procedures and follow through with implementation as well as other assigned projects.  
