--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
      <li>Assist with supervisor and agent questions about processes and applications.</li>
      <li>Research industry and weather-related news that would affect customers and sent alerts to agents to assist with customer service requests.</li>
      <li>Posted new and updated training materials, news related issues and supplier contact information in SharePoint.</li>
-     <li>Traveled to the Netherlands to learn Mitel Phone System and developed training materials relevant to customer service representatives.<li>
+     <li>Traveled to the Netherlands to learn Mitel Phone System and developed training materials relevant to customer service representatives.</li>
      <li>Traveled to Bangalore, India to provide training on new computer applications and phone system.</li>
      <li>Provided training remotely with the assistance of GoToMeeting to customer service representatives.  </li>
     </ul>
