--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   
     <h1>Kathy Polansky</h2>
     
-    <h5>1443 Fourth Avenue South</h5>
-    <h5>Fargo, ND 58103</h5>
-    <h5>kjp3070@gmail.com</h5>
-    <h5>701 200-9012</h5>
+    <p>1443 Fourth Avenue South</p>
+    <p>Fargo, ND 58103</p>
+    <p>kjp3070@gmail.com</p>
+    <p>701 200-9012</p>
     
     <h2>Experience</h2>
     <h3>Travel and Transport</h3>
