--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
       <title>Resume for Kathy Polansky</title>
+      <link rel= "stylesheet" href="./style.css">
   </head>
   
   <body>
@@ -20,7 +21,7 @@
     <ul>
       <li>Coordinate and manage projects of implementation, ensuring successful implementation of new accounts.</li> 
       <li>Work as a liaison during implementation to build relationships with new clients to ensure customer satisfaction and expectations are met. </li>
-      <li>Work with internal Travel and Transport departments to assist with the implementation of new or existing accounts. </li>
+      <li>Collaborate with internal Travel and Transport departments to assist with the implementation of new or existing accounts. </li>
     </ul>
     
     <h4>Bench Team</h4>
