--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h4>Bench Team</h4>
     <ul>
       <li>Arrange domestic and international reservations, including air, car, hotel, limousine and Amtrak for multiple corporate clients. </li>
-      <li>I also assisted with working Online Fulfillment queues.</li>
+      <li>Assist with working Online Fulfillment queues.</li>
     </ul>
     
     <h4>Supervisor</h4>
