--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     
     <h3>Upstream / Rosenbluth International</h3>
     <h4>Training Supervisor</h4>
+    <p>March 1994 - March 2009</p>
     <ul>
       <li>Ensured Learning Specialists were prepared for upcoming classes, recurrent training and any issues that may come up. </li>
       <li>Utilized a web-based reporting system to track their weekly plans and pass it onto the appropriate individuals to ensure 
